# dxup

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  appveyor.yml  build-win32.txt  build-wine32.txt  build-wine64.txt  meson.build  package-release.sh  version.h.in
src/: dxup_guids.cpp  meson.build
src/d3d10/: d3d10.def  d3d10_main.cpp  meson.build
src/d3d10_1/: d3d10_1.def  d3d10_1.spec  d3d10_1_base.h  d3d10_1_blend.cpp  d3d10_1_blend.h  d3d10_1_buffer.cpp  d3d10_1_buffer.h  d3d10_1_device.cpp  d3d10_1_device.h  d3d10_1_device_child.h  d3d10_1_include.h  d3d10_1_input_layout.cpp  d3d10_1_input_layout.h  d3d10_1_main.cpp  d3d10_1_query.cpp  d3d10_1_query.h  d3d10_1_shader.h  d3d10_1_state.h  d3d10_1_texture.cpp  d3d10_1_texture.h  d3d10_1_view_dsv.cpp  d3d10_1_view_dsv.h  d3d10_1_view_rtv.cpp  d3d10_1_view_rtv.h  d3d10_1_view_srv.cpp  d3d10_1_view_srv.h  d3d10_1_wrappers.cpp  d3d10_1_wrappers.h  dxgi_swapchain.cpp  dxgi_swapchain.h  logger.cpp  logger.h  meson.build
src/d3d10_original/: d3d10_original.h  d3d10_original_interfaces.h
src/d3d10_shared/: d3d10_shared_main.cpp
src/d3d9/: d3d11_dynamic_buffer.cpp  d3d11_dynamic_buffer.h  d3d9.spec  d3d9_base.h  d3d9_basetexture.h  d3d9_buffer.h  d3d9_constant_buffer.cpp  d3d9_constant_buffer.h  d3d9_d3d11_resource.cpp  d3d9_d3d11_resource.h  d3d9_d3d11_resource_mapping.cpp  d3d9_definitions.h  d3d9_device.cpp  d3d9_device.h  d3d9_device_unknown.h  d3d9_format.cpp  d3d9_format.h  d3d9_includes.h  d3d9_interface.cpp  d3d9_interface.h  d3d9_main.cpp  d3d9_map_tracker.h  d3d9_query.cpp  d3d9_query.h  d3d9_renderer.cpp  d3d9_renderer.h  d3d9_resource.h  d3d9_shaders.h  d3d9_state.cpp  d3d9_state.h  d3d9_state_cache.cpp  d3d9_state_cache.h  d3d9_state_caches.h  d3d9_surface.cpp  d3d9_surface.h  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_texture.cpp  d3d9_texture.h  d3d9_util.cpp  (+7 more)
src/d3d9/shaders/: blit.hlsl  blit.ps.dxbc.h  blit.vs.dxbc.h  compile_shaders.bat
src/dx9asm/: dx9asm_bytecode.cpp  dx9asm_dclinfo.h  dx9asm_meta.h  dx9asm_modifiers.cpp  dx9asm_modifiers.h  dx9asm_operand.cpp  dx9asm_operand.h  dx9asm_operation_helpers.h  dx9asm_operations.cpp  dx9asm_operations.h  dx9asm_register_id.h  dx9asm_register_map.cpp  dx9asm_register_map.h  dx9asm_register_mapping.cpp  dx9asm_register_mapping.h  dx9asm_standard_operations.cpp  dx9asm_translator.cpp  dx9asm_translator.h  dx9asm_unique_operations.cpp  dx9asm_util.cpp  dx9asm_util.h  dxbc_bytecode.cpp  dxbc_bytecode.h  dxbc_chunks.cpp  dxbc_chunks.h  dxbc_header.h  dxbc_helpers.cpp  dxbc_helpers.h  dxbc_shaderflags.h  dxbc_stats.h  meson.build
src/dxgi/: dxgi.def  dxgi.spec  dxgi_factory.cpp  dxgi_factory.h  dxgi_main.cpp  dxgi_swapchain.cpp  dxgi_swapchain.h  meson.build
src/util/: config.cpp  config.h  d3dcompiler_helpers.cpp  d3dcompiler_helpers.h  fixed_buffer.h  fourcc.h  hash.h  log.cpp  log.h  meson.build  misc_helpers.h  placeholder_ptr.h  private_data_d3d.cpp  private_data_d3d.h  shared_conversions.cpp  shared_conversions.h  thread.cpp  thread.h  type_converter.h  unknown.h  vectypes.h  windows_includes.h
utils/: meson.build  setup_dxup_d3d9.sh.in  setup_dxup_d3d9.verb
wine_utils/: meson.build  readme.txt  setup_dx10to11.sh.in  setup_dxup.in
